2004-06-16  Havoc Pennington  <hp@redhat.com>

	* add hacky "no focus on map" pref patch (clearly labeled as a
	hack only in rhel3)

2004-06-16  Havoc Pennington  <hp@redhat.com>

	* create a RHEL3 branch to manage layering on some patches from
	our RPM, this is a dead-end branch for my convenience. Initially
	commit all the RPM patches.
	
2004-06-14  Havoc Pennington  <hp@redhat.com>

	* src/xprops.c (utf8_list_from_results): fix this to compile (1
	year later) - clearly everyone is testing GNOME 2.2 from CVS...

2003-07-29  Arvind Samptur  <arvind.samptur@wipro.com>

	* src/xprops.c (utf8_list_from_results): Number of
	strings we are processing is one more than required.

	Also get the string count right even without a null byte at the end.
	Pointed out by Havoc.

2003-07-21  Arafat Medini  <lumina@silverpen.de>

	* ar.po: Added "ar" Arabic to ALL_LINGUAS

2003-07-01  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* configure.in: Added "cy" (Welsh) to ALL_LINGUAS

2003-06-26  Mohammad DAMT  <mdamt@bisnisweb.com>

	* po/id.po: Added Indonesian translation
	* configure.in: Added "id" to ALL_LINGUAS

2003-06-07  Havoc Pennington  <hp@pobox.com>

	* src/window.c (meta_window_notify_focus): drop the mouse button
	grabs for the focused window; we'll see if this breaks anything. 
	It should fix #102209

2003-05-21  Havoc Pennington  <hp@pobox.com>

	* NEWS: update

	* configure.in: 2.4.55

2003-05-20  Havoc Pennington  <hp@pobox.com>
	
	* src/keybindings.c (meta_change_keygrab): the mask 
	display->ignored_modifier_mask wasn't being bound, 
	due to "<" instead of "<=" (most people didn't notice
	as display->ignored_modifier_mask included Scroll_Lock).
	Red Hat bugzilla #91301 reported by Youssef Makki

	* src/display.c (meta_change_button_grab): make corresponding
	change for button grabs.

2003-05-06  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

Fri Mar 28 15:39:35 2003  Soeren Sandmann  <sandmann@daimi.au.dk>
